fix nwjs version not have scrollbars

--- a/OpenSystemDynamics/src/style/editor.css
+++ b/OpenSystemDynamics/src/style/editor.css
@@ -569,3 +569,8 @@ b[data-arg]::before {
 .preferences > .preference .title {
     font-weight: bold;
 }
+
+.invisible-file-input {
+    position: absolute;
+    width: 0;
+}
